--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 # Byte-compiled / optimized / DLL files
+
+*.log
+*.logs
+*.db
+
+/documentacao
+
 __pycache__/
 *.py[codz]
 *$py.class
 
 # C extensions
 *.so
+.idea 
 
 # Distribution / packaging
 .Python
@@ -69,7 +77,7 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+documentacao/_build/
 
 # PyBuilder
 .pybuilder/
@@ -173,7 +181,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 
 # Abstra
 # Abstra is an AI-powered process automation framework.
@@ -205,3 +213,13 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/NexlifyTTk.iml
+.idea/vcs.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/NexlifyTTk.iml
+.idea/vcs.xml
