refactor: correcao de bugs

--- a/.gitignore
+++ b/.gitignore
@@ -217,10 +217,10 @@ __marimo__/
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/misc.xml
 .idea/modules.xml
-.idea/NexlifyTTk.iml
+.idea/nexlifyttk.iml
 .idea/vcs.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/misc.xml
 .idea/modules.xml
-.idea/NexlifyTTk.iml
+.idea/nexlifyttk.iml
 .idea/vcs.xml
